# Synthetic-Arbitrage-Detection-Engine-1.0

./: .gitignore  .vscodeignore  CMakeLists.txt  PROJECT_STRUCTURE.md  Phases.md  README.md  arbitrage-engine.code-workspace  build.sh  cleanup.sh  test_config.json  test_namespace.cpp  test_phase12.sh  verify_phase12.sh  vscode_performance_fix.sh
appwrite-deployment/: DEPLOYMENT_GUIDE.md  Dockerfile  QUICK_DEPLOYMENT_GUIDE.md  appwrite.json  deploy-step-by-step.sh  deploy.sh  simple-deploy.sh  test-deploy.sh
appwrite-deployment/config/: production.json
appwrite-deployment/dashboard/: index.html
appwrite-deployment/functions/arbitrage-detection/: package-lock.json  package.json
appwrite-deployment/functions/arbitrage-detection/src/: main.js
appwrite-deployment/functions/market-data-api/: package-lock.json  package.json
appwrite-deployment/functions/market-data-api/src/: main.js
config/: README.md  config.json  config_production.json
docs/: Architecture.md  DASHBOARD_CRASH_FIX_REPORT.md  ENHANCED_DASHBOARD_FEATURES.md  ENHANCEMENT_COMPLETION_REPORT.md  FINAL_CRASH_FIX_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE7_COMPLETION_REPORT.md  Phase12_Implementation_Summary.md  Phase2_Status.md  Phase3_Status.md  Phase6_UI_Integration_Guide.md  Phase9_Plan.md  Plan.md  VSCODE_OPTIMIZATION.md  new_phase.md
src/: CMakeLists.txt  dashboard_demo.cpp  main.cpp  phase11_advanced_strategies_demo.cpp  phase12_performance_demo.cpp  phase2_demo.cpp  phase3_demo.cpp  phase4_demo.cpp  phase5_demo.cpp  phase6_demo.cpp  phase7_performance_demo.cpp  phase8_integration_demo.cpp
src/api/: ApiFramework.cpp  ApiFramework.hpp  ApiServerImplementation.cpp
src/benchmarks/: performance_benchmark.cpp
src/config/: ConfigurationManager.cpp  ConfigurationManager.hpp
src/core/: AdvancedMemoryManager.hpp  AdvancedSyntheticStrategies.cpp  AdvancedSyntheticStrategies.hpp  AlgorithmOptimizer.cpp  AlgorithmOptimizer.hpp  ArbitrageEngine.cpp  ArbitrageEngine.hpp  CMakeLists.txt  ExecutionPlanner.cpp  ExecutionPlanner.hpp  ExecutionSimulator.cpp  ExecutionSimulator.hpp  MathUtils.cpp  MathUtils.hpp  MemoryManager.cpp  MemoryManager.hpp  OpportunityRanker.cpp  OpportunityRanker.hpp  Phase12PerformanceEngine.cpp  Phase12PerformanceEngine.hpp  PnLTracker.cpp  PnLTracker.hpp  PositionManager.cpp  PositionManager.hpp  PricingEngine.cpp  PricingEngine.hpp  RiskManager.cpp  RiskManager.hpp
src/data/: BinanceClient.cpp  BinanceClientReal.cpp  BinanceClient_old.cpp  BinanceClient_old.hpp  BinanceClient_simple.hpp  BybitClient.cpp  BybitClient.hpp  BybitClientReal.cpp  BybitClient_old.hpp  CMakeLists.txt  CMakeLists_new.txt  CMakeLists_old.txt  DataPersistence.cpp  DataPersistence.hpp  DataPersistence_old.cpp  MarketData.cpp  MarketData.hpp  OKXClient.cpp  OKXClientReal.cpp  OKXClient_old.hpp  OKXClient_simple.hpp  RealTimeDataManager.cpp  RealTimeDataManager.hpp  WebSocketClient.cpp  WebSocketClient.hpp
src/monitoring/: SystemMonitoring.cpp  SystemMonitoring.hpp
src/network/: NetworkOptimizer.cpp  NetworkOptimizer.hpp
src/performance/: PerformanceMetrics.cpp  PerformanceMetrics.hpp
src/profiling/: AdvancedProfiler.hpp
src/risk/: EnhancedRiskModels.cpp  EnhancedRiskModels.hpp  EnhancedRiskModelsImplementation.cpp  EnhancedRiskModels_backup.cpp
src/ui/: CMakeLists.txt  DashboardApp.cpp  DashboardApp.cpp.backup  DashboardApp.cpp.backup2  DashboardApp.hpp  DashboardApp_broken.cpp  DashboardApp_simple.cpp  DataExporter.cpp  DataExporter.hpp  HttpServer.cpp  HttpServer.hpp  WebSocket.hpp  dashboard.html  demo
src/ui/components/: BottleneckIdentificationPanel.js  ExecutionPlanner.js  LatencyTrackingInterface.js  OpportunityRanking.js  PaperTradingInterface.js  PerformanceMonitoringDashboard.js  PerformanceTrendAnalysis.js  Phase6Dashboard.js  Phase7Dashboard.js  PnLTracker.js  SystemHealthIndicators.js  SystemMetricsDashboard.js  ThroughputMonitoringPanel.js  TradeExecutionVisualization.js
src/utils/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  ErrorHandler.cpp  ErrorHandler.hpp  Logger.cpp  Logger.hpp  StringUtils.hpp  ThreadUtils.cpp  ThreadUtils.hpp
tests/: CMakeLists.txt  test_main.cpp  test_utils.cpp
